tests/NormalTests/paczka1/small_fuzzy/11314513.err
Error in line 4: 1Xn S814 25,9
Error in line 10: A276 A276 99,7
Error in line 9: MgCIkea A619 11,0
